# datascience_toolkit

./: .gitignore  MANIFEST.in  README.md  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-package.yml  python-publish.yml
datascience_toolkit/: __init__.py  apriori_analysis.py
datascience_toolkitt/: __init__.py  analysis.py  apriori_analysis.py  clustering.py  sentiment_analysis.py  social_network.py
