[metadata]
name = datascience_toolkit              # CHOOSE a unique name on PyPI
version = 1.0.0
author = Your Name
author_email = your.email@example.com
description = Toolkit for assignments: clustering, apriori, sentiment, SNA
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/YOUR_GITHUB_USERNAME/datascience_toolkit
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
install_requires =
    pandas
    numpy
    matplotlib
    seaborn
    scikit-learn
    mlxtend
    nltk
    networkx
